2004-03-29  Hari Prasad Nadig  <hp@ndeepak.info>

	* gui/goto-dialog.glade: Naming issue, Go to Date -> Select Date,
	Go to Today -> Select today. Solves 48293
	
	* gui/e-calendar-view.c: gives aid to the above change.

2004-03-29  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/alarm-queue.c (query_objects_changed_cb): removed
	misplaced return statement that prevented the rest of the objects list
	to be processed.

2004-03-29  Kidd Wang  <kidd.wang@sun.com>

	* gui/e-calendar-view.c: (e_calendar_view_class_init): remove the
 	EVENT_MOVE signal which was binded to Alt + Arrows.
 	* gui/e-calendar-view.h: ditto.
 	* gui/e-day-view.c: (e_day_view_class_init),
	(e_day_view_do_key_press), (e_day_view_event_move): handle Alt + Arrows
	in the more general place e_day_view_do_key_press so that we can avoid
	the conflicting accessible key. When an appointment is selected,
	pressing Alt + Arrows causes it to be moved around. Otherwise, pressing
	Alt + LEFT/RIGHT will move the focus to the same day in the
	previous/next week.
	* gui/e-week-view.c: (e_week_view_class_init),
	(e_week_view_event_move), (e_week_view_do_key_press): ditto.

2004-03-26  JP Rosevear <jpr@ximian.com>

	* gui/e-cal-model.c (update_e_cal_view_for_client): guard against
	the case that we redo queries while still waiting for a client to
	open

2004-03-26  JP Rosevear  <jpr@ximian.com>

	Fixes #53134
	
	* gui/e-cal-model.c (get_description): make sure to set the string
	to NULL so that if this component doesn't have a description we
	don't double free next time we are called

2004-03-26  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_calendars): no need to explicitly add
	the contacts group, the create function does this properly

2004-03-26  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_calendars): make sure we always sync
	the source list and just do it once; unref the sources we get
	(migrate_tasks): make sure we always sync
	the source list and just do it once
