@@ -1,3 +1,8 @@
+2004-03-29  William Jon McCann  <mccann@jhu.edu>
+
+	* gui/migration.c (create_task_sources, migrate_tasks): create
+	On The Web source group for tasks.
+
 2004-03-29  Hari Prasad Nadig  <hp@ndeepak.info>
 
 	* gui/goto-dialog.glade: Naming issue, Go to Date -> Select Date,
